# Detection-of-Recessive-Advertising

./: .gitignore  HANDOFF.md  README.md  简要标注示例.json
implicit-ad-agent/: .env.example  .gitignore  README.md  app.py  planP1.prompt.md  pyproject.toml  requirements-vision.txt  requirements.txt  run_demo.py  run_tools_demo.py  temp_wechat_inspect.py
implicit-ad-agent/docs/: annotation_guide.md  annotation_supplement_schema.md  crawler-guide.md  data_collection_usage.md  data_compliance.md  data_schema.md  dataset_card_v1.md  wechat_collection_usage.md
implicit-ad-agent/impad/: __init__.py  config.py  graph.py  hello_graph.py  llm.py  state.py
implicit-ad-agent/impad/agents/: __init__.py  behavior_agent.py  judge.py  nlp_agent.py  supervisor.py  vision_agent.py
implicit-ad-agent/impad/tools/: __init__.py  comment_anomaly.py  contracts.py  detect_logo_product.py  image_text_consistency.py  keywords.py  ocr_extract.py  registry.py  sentiment.py  text_intent.py  topic_drift.py  vision.py  vision_context.py
implicit-ad-agent/samples/: sample_posts.json  tool_demo_post.json  vision_consistency_sanity.json
implicit-ad-agent/tests/: conftest.py  test_agents.py  test_keywords.py  test_smoke.py  test_tool_comment_anomaly.py  test_tool_contracts.py  test_tool_detect_logo_product.py  test_tool_image_text_consistency.py  test_tool_ocr_extract.py  test_tool_registry.py  test_tool_sentiment.py  test_tool_text_intent.py  test_tool_topic_drift.py  test_tool_vision_context.py  test_tools_demo.py  test_vision.py  test_vision_consistency_sanity.py  test_vision_integration.py
(+28 files in other folders)
